@@ -7,6 +7,8 @@ import com.yogesh.todo.repository.TodoRepository;
 import com.yogesh.todo.service.TodoService;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -16,11 +18,15 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class TodoServiceImpl implements TodoService {
 
+    private static final Logger logger = LoggerFactory.getLogger(TodoServiceImpl.class);
+
     private final TodoRepository todoRepository;
     private final ModelMapper modelMapper;
 
     @Override
     public TodoDto addTodo(TodoDto todoDto) {
+        logger.info("Adding a new todo: {} ",todoDto.getTitle());
+
         // Convert TodoDto into Todo Jpa Entity
         Todo todo = modelMapper.map(todoDto,Todo.class);
 
@@ -29,29 +35,43 @@ public class TodoServiceImpl implements TodoService {
         // Convert savedDto Todo Jpa entity object into TodoDto Object
         TodoDto savedTodoDto = modelMapper.map(savedDto,TodoDto.class);
 
+        logger.info("Todo added successfully with ID: {}", savedDto.getId());
         return savedTodoDto;
     }
 
     @Override
     public TodoDto getTodo(Long id) {
+        logger.info("Fetching todo with ID: {}",id);
 
         Todo todo = todoRepository.findById(id)
-                .orElseThrow(()-> new ResourceNotFoundException("Todo not found with id: "+id));
+                .orElseThrow(()->{
+                    logger.error("Todo not found with ID: {} ",id);
+                    return new ResourceNotFoundException("Todo not found with id: "+id);
+                });
 
+        logger.info("Todo fetched successfully: {}", todo.getTitle());
         return modelMapper.map(todo,TodoDto.class);
     }
 
     @Override
     public List<TodoDto> getAllTodos() {
+        logger.info("Fetching all todos");
         List<Todo> todos = todoRepository.findAll();
-        return todos.stream().map((todo) -> modelMapper.map(todo,TodoDto.class))
-                .collect(Collectors.toList());
+        List<TodoDto> todoDtos = todos.stream().map((todo) -> modelMapper.map(todo, TodoDto.class))
+                .toList();
+        logger.info("Total todos fetched: {}",todoDtos.size());
+        return todoDtos;
     }
 
     @Override
     public TodoDto updateDoto(TodoDto todoDto, Long id) {
 
-        Todo todo = todoRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Todo not found with id: " + id));
+        logger.info("Updating todo with ID: {}",id);
+
+        Todo todo = todoRepository.findById(id).orElseThrow(() -> {
+                    logger.info("Todo not found with ID: {}",id);
+                    return new ResourceNotFoundException("Todo not found with id: " + id);
+                });
 
         todo.setTitle(todoDto.getTitle());
         todo.setDescription(todoDto.getDescription());
@@ -59,37 +79,53 @@ public class TodoServiceImpl implements TodoService {
 
         Todo savedTodo = todoRepository.save(todo);
 
-
+        logger.info("Todo updated successfully: {}",savedTodo.getTitle());
 
         return modelMapper.map(savedTodo,TodoDto.class);
     }
 
     @Override
     public void deleteTodo(Long id) {
-        Todo todo = todoRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Todo not found with id: " + id));
+        logger.info("Deleting todo with id: {}", id);
+
+        Todo todo = todoRepository.findById(id).orElseThrow(() -> {
+            logger.error("Todo not found with ID: {}",id);
+            return new ResourceNotFoundException("Todo not found with id: " + id);
+        });
         todoRepository.deleteById(id);
+        logger.info("Todo with ID: {} deleted successfully",id);
     }
 
     @Override
     public TodoDto completeTodo(Long id) {
+        logger.info("Marking todo as complete with ID: {}", id);
 
-        Todo todo = todoRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Todo not found with id: " + id));
+        Todo todo = todoRepository.findById(id)
+                .orElseThrow(() -> {
+                    logger.error("Todo not found with ID: {}", id);
+                    return new ResourceNotFoundException("Todo not found with id: " + id);
+                });
 
         todo.setCompleted(Boolean.TRUE);
 
         Todo updatedTodo = todoRepository.save(todo);
-
+        logger.info("Todo with ID: {} marked as completed", id);
         return modelMapper.map(updatedTodo,TodoDto.class);
     }
 
     @Override
     public TodoDto inCompleteTodo(Long id) {
+        logger.info("Marking todo as incomplete with ID: {}", id);
 
-        Todo todo = todoRepository.findById(id).orElseThrow(()-> new ResourceNotFoundException("Todo not found with id: "+ id));
-        
+        Todo todo = todoRepository.findById(id)
+                .orElseThrow(() -> {
+                    logger.error("Todo not found with ID: {}", id);
+                    return new ResourceNotFoundException("Todo not found with id: " + id);
+                });
+
         todo.setCompleted(Boolean.FALSE);
         Todo updatedTodo = todoRepository.save(todo);
-
+        logger.info("Todo with ID: {} marked as incomplete", id);
         return modelMapper.map(updatedTodo,TodoDto.class);
     }
 }
